--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
     "version": 1,
     "newProjectRoot": "projects",
     "projects": {
-        "fuse": {
+        "portfolio": {
             "projectType": "application",
             "schematics": {
                 "@schematics/angular:component": {
@@ -17,7 +17,8 @@
                 "build": {
                     "builder": "@angular-devkit/build-angular:browser",
                     "options": {
-                        "outputPath": "dist/fuse",
+                        "outputPath": "dist/portfolio",
+                        "baseHref": "/portfolio/",
                         "index": "src/index.html",
                         "main": "src/main.ts",
                         "polyfills": [
@@ -90,10 +91,10 @@
                     "builder": "@angular-devkit/build-angular:dev-server",
                     "configurations": {
                         "production": {
-                          "buildTarget": "fuse:build:production"
+                          "buildTarget": "portfolio:build:production"
                         },
                         "development": {
-                          "buildTarget": "fuse:build:development"
+                          "buildTarget": "portfolio:build:development"
                         }
                     },
                     "defaultConfiguration": "development"
@@ -101,7 +102,7 @@
                 "extract-i18n": {
                     "builder": "@angular-devkit/build-angular:extract-i18n",
                     "options": {
-                      "buildTarget": "fuse:build"
+                      "buildTarget": "portfolio:build"
                     }
                 },
                 "test": {
@@ -122,6 +123,13 @@
                             "src/styles/styles.scss"
                         ],
                         "scripts": []
+                    }
+                },
+                "deploy": {
+                    "builder": "angular-cli-ghpages:deploy",
+                    "options": {
+                        "baseHref": "/your-repository-name/",
+                        "outputPath": "dist/your-project-name"
                     }
                 }
             }
